# aes-file-encryptor-rs

./: Cargo.toml  README.md
.github/: workflows
src/: lib.rs  main.rs
tests/: integration_tests.rs
